--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -303,6 +303,51 @@ warmup of 1K steps. The model is trained with 400k steps. For the transformer, w
 > **Inference** 
 > To synthesize speech, we first input the text into the proposed sentence duration module, which can be used to determine the total length of the predicted speech by controlling the length of the noisy latent sequence. Then we input the text and speaker prompt into the SimpleSpeech 2 to generate the predicted latent of SQ-codec. Lastly, we get the predicted waveform by inputting the predicted latent representation into the SQ-Codec decoder. 
 
+### 4.3.Baselines
+
+> **TTS Baselines**
+> We compare the proposed model with state-of-the-art autoregressive TTS models: 
+> - VALL-E \cite{valle}: we reproduce it on the same dataset with us.
+> - VALL-EX \cite{vallex}: we use the open-source version from Git Hub.\footnote{https://github.com/Plachtaa/VALL-E-X} 
+> - VoiceCraft \cite{voicecraft}: we use the official open-source checkpoint from GitHub. \footnote{https://github.com/jasonppy/VoiceCraft}
+> - ARDiT \cite{liu2024autoregressive}: We compared with their demo samples.
+> - ChatTTS: A popular open-sourced AR-based TTS. \footnote{https://github.com/2noise/ChatTTS}
+>
+> We also compare the proposed model with Non-autoregressive TTS models:
+> - NaturalSpeech 2 \cite{ns2}: we reproduce it on the same dataset with us.
+> - NaturalSpeech 3 \cite{ns3}: we get the samples from the authors. 
+> - HierSpeech++ \cite{hierspeech++}: we use the official open-source checkpoint from GitHub.\footnote{https://github.com/PolyAI-LDN/pheme}
+> - E3TTS \cite{e3tts}: We compared with their demo samples.
+> - DiTTo-TTS \cite{ditto-tts}: We compared it with their demo samples.
+> 
+> **Speech Tokenizer Baselines** 
+> For audio codec models, we compare the proposed SQ-Codec model with state-of-the-art models, includes: including Encodec \cite{encodec}, DAC \cite{dac}, HiFi-Codec \cite{yang2023hifi}, Soundstream \cite{soundstream}, and VAE \cite{stableaudio}. For EnCodec, DAC, and HiFi-Codec, we use their official checkpoints for inference. For SoundStream, we reproduce it based on the open-source repository \footnote{https://github.com/yangdongchao/AcademiCodec}. For VAE, we follow the open source repository of Stable Audio \cite{stableaudio} \footnote{https://github.com/Stability-AI/stable-audio-tools}. For both SoundStream and VAE, we set their latent dimension as the same as SQ-Codec and trained them with the same dataset as SQ-Codec.
+
+### 4.4.Evaluation Metrics
+
+#### Speech Tokenizer Evaluation 
+
+> For audio tokenizer models, we use the following metrics: Perceptual Evaluation of Speech Quality (PESQ), Short-Time Objective Intelligibility (STOI), and structural similarity index measure (SSIM).
+
+#### TTS Evaluation 
+
+> For the TTS task, we assess the performance from 4 aspects: intelligibility, speaker similarity, speech quality, and generation speed. Furthermore, we also conduct subjective evaluations for TTS.
+> **Intelligibility** 
+> Word Error Rate (WER) is widely used to assess the intelligibility of generated speech. However, previous work \cite{seedtss} suggests that WER may not serve as a definitive criterion; a lower WER often indicates that the model produces more ‘standardized’ speech, which is easier for ASR systems to recognize. To provide a more comprehensive evaluation, we propose using multiple ASR systems to assess the generated speech, employing the mean WER as the metric for comparison. In this study, we utilize the Whisper-large model and the Hubert-large-based ASR system to evaluate the robustness. 
+> **Speaker Similarity** 
+> Similarly, previous works use a pre-trained speaker model to extract speaker embedding, and then calculate the speaker similarity score (SIM). However, we empirically observe that using different speaker embedding models results in different SIM scores. Thus, we propose to use multiple speaker embedding models as the 'referee', and use the average score as the final metric. More specifically, we use the pre-trained WavLM-TDNN model and the 1st layer of XLSR-53 \cite{conneau2020unsupervised} to extract speaker embedding. 
+> **Speech quality (Perception score)** 
+> DNSMOS \cite{dnsmos} and Mel-Cepstral Distortion (MCD) are used to measure speech quality. 
+> **Generation speed** 
+> Following previous work, we use RTF real-time factor (RTF) to measure the efficiency:
+
+$$
+ RTF = \frac{Cost\_Time}{Duration}
+$$
+
+> **Subjective Evaluation** 
+> For subjective metrics, we hire 15 listeners to conduct speech naturalness/quality (MOS) and speaker similarity (SMOS) tests. For the MOS test, we ask listeners to focus on whether the speech is realistic, the speech's naturalness, clearness, and prosody. For the SMOS test, we ask listeners to judge whether the generated speech is similar to the reference speech in terms of timbre, emotion, and prosody. 
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
