--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -350,6 +350,61 @@ $$
 
 ## 5.Results: 结果
 
+### 5.1.The performance of Speech Tokenizer
+
+> As we discussed in previous sections, speech tokenizers play an important role in the proposed TTS system: (1) Completeness: its reconstruction performance determines the upper limit of speech generation; (2) Compactness: which determines the search space of the generative model. We first compare the reconstruction performance of our proposed SQ-Codec model to other state-of-the-art audio tokenizers. Table \ref{tab:all-codec-comparison} shows the results, we can see that our proposed SQ-Codec has a good reconstruction performance, which lays the foundation for high-quality speech generation. We have the following findings: (1) Compared with previous audio codec models, such as Encodec and Soundstream, our SQ-Codec has better reconstruction performance. Especially, our SQ-Codec has better reconstruction performance than VAE. As we discussed in Section \ref{sec:related_work_tokenizer}, VAE needs to force the data distribution belongs to normal distribution, which may limit the reconstruction performance. (2) We note that SQ-Codec is more lightweight than other models, which further improves the generation efficiency. 
+> Furthermore, we also conduct an ablation study to explore the influence of two hyper-parameters ($S$ and $d$) in SQ-Codec. Specifically, we evaluate the reconstruction performance and the generation performance when the corresponding audio tokenizer is used. Please refer to Section \ref{sub:good tokenizer} to see our findings.
+
+### 5.2.Comparison with Previous Large-scale TTS Baselines
+
+> In this section, we conduct experiments to evaluate the performance of zero-shot speech synthesis. Note that we compare our SimpleSpeech 2-EN version with other baselines in the English dataset. Table \ref{table:tts} and \ref{tab:small-scale} show the results. In the following, we will analyze the results from three aspects: Speech quality, Speaker Similarity, Robustness, and Generation Speed. 
+>
+> **Speech quality** 
+> Speech quality is an important factor in evaluating a TTS system, previous works may result in poor speech quality due to suboptimal audio tokenizer and generative strategies. In this study, we adopt a more advanced audio tokenizer and generative model, which significantly improves the speech quality. From the MOS and DNSMOS scores, we can see the generated samples by SimpleSpeech 2 even surpass the ground truth speech. 
+>
+> **Speaker Similarity** 
+> Nowadays, voice cloning ability has been viewed as a basic metric to access the zero-shot TTS system. Previous works \cite{ns3,voicebox,voicecraft} have shown that scaling the speech data can improve the zero-shot cloning ability. Most of them are both trained on large-scale datasets (\textit{e.g.} 60k hours). Although our SimpleSpeech 2 only trained on 7k hours of data, we can see that it also shows comparable performance to baselines trained with much more data. 
+>
+> **Robustness** 
+> As we discussed in Section \ref{sub: related work}, AR-based TTS systems usually face the robustness problem because their training does not rely on phoneme-level duration alignment data. In this study, our proposed model also does not rely on phoneme-level alignment data. From Table \ref{table:tts}, we can see that SimpleSpeech 2 shows better robustness than previous AR-based works, \textit{e.g.} SimpleSpeech 2 is more robust than VALL-EX, ChatTTS, VoiceCraft in our English evaluation set. Compared with phoneme duration-driven NAR systems, our method is still behind some NAR-based models, such as HierSpeech++. We believe that the gap can be eliminated by scaling data. The concurrent work, SeedTTS \cite{seedtss}, also uses a similar strategy to us, they show that the system can be more robust after training with large-scale data. 
+>
+> **Generation Speed** 
+> In general, AR-based large TTS models will cost a lot of time in inference because they generate speech tokens one by one. In this study, our model can generate scalar latent features in an NAR way, then the decoder of SQ-Codec is used to recover waveform from the generated feature. From Table \ref{table:tts}, we can see that our proposed model is better than AR-based models in terms of RFT. Compared with other NAR TTS models, our proposed method needs fewer inference steps without any diffusion distillation. For instance, E3TTS \cite{e3tts} proposes to generate a waveform, it needs 1000 diffusion steps. NaturalSpeech 2 also uses 150 steps to ensure sufficient generation quality. Instead, our SimpleSpeech 2 is based on flow-based diffusion models, it can generate high-quality speech with 25 steps. As a contrast, our previous work, SimpleSpeech uses 100 diffusion steps. 
+
+### 5.3.Discussion: what is a good audio tokenizer?
+
+> In this section, we explore the influence of audio tokenizers on large-scale TTS systems. Initially, we replace our proposed SQ-Codec with other audio tokenizers, such as VAE and SoundStream. The results are presented in Table \ref{tab:ablation-features}. 
+> Subsequently, we investigate the impact of the search space of SQ-Codec on speech generation. Specifically, we set different hyper-parameters,  $S$ and $d$ , to train new SQ-Codec models. These models are then utilized as audio tokenizers for speech synthesis. Our findings are as follows: 
+> (1) The reconstruction performance of the audio tokenizer determines the upper limit of generated speech quality.For example, Table \ref{tab:all-codec-comparison} shows that our SQ-Codec achieves the best reconstruction performance, while our reproduced version of SoundStream performs less effectively. Consequently, using SQ-Codec as the audio tokenizer results in the highest DNSMOS score for the generation model, whereas using SoundStream yields inferior outcomes. \\
+> (2) The proposed scalar latent space is more readily modeled by generative model. In Table \ref{tab:ablation-features}, we set the latent dimension of VAE, SoundStream, and SQ-Codec as 32. The difference is that SoundStream and VAE tried to compress the speech data into a complex continuous distribution, and SQ-Codec tried to compress the speech data into a finite distribution: the value range of each pixel in the scalar latent space belongs to a discrete uniform distribution. Instead, the range of SoundStream and VAE is infinite. Consequently, using SQ-Codec as the speech tokenizer results in superior performance. \\
+> (3) The Compactness of audio tokenizers significantly influences the performance of generative models. As Table \ref{tab:ablation-sq-codec} shows, when we increase the latent dimension of SQ-Codec to 50, its reconstruction performance obtains improvement, but the performance of the generation model significantly decreases. Similarly, if we decrease the latent dimension and scalar value, the reconstruction performance will drop, and a poor audio tokenizer also influences the generation performance. In our study, to balance the completeness and compactness, we suggest to use $S=9$ and $d=32$. \\
+>
+> In summary, an effective tokenizer should compress speech data into a latent space that is both compact and complete, ensuring good reconstruction performance and ease of modeling by generative models.
+
+### 5.4.Discussion: why ASR transcription can be used as a label to train a good TTS system?
+
+> Many previous studies \cite{valle,uniaudio} have demonstrated that text transcriptions from ASR systems can be effectively used to train TTS systems. However, these transcriptions are inevitably imperfect and are often referred to as noisy or weak labels. In Section \ref{sec:cfc}, we provide a theoretical analysis showing that including a small number of noisy labels in a large-scale dataset is analogous to employing classifier-free guidance training for model optimization. Generally, most ASR systems perform well, achieving a WER of less than 10\%. Therefore, we can utilize these ASR transcriptions to train our TTS system. In this study, we employ a state-of-the-art (SOTA) open-sourced ASR model, Whisper \cite{whisper}, which has been widely validated.
+
+### 5.5.Ablation study: the influence of sentence duration predictor
+
+> In this part, we explore which type of sentence duration is better. From Table \ref{tab:ablation-duration}, we observe that (1) Four types of sentence duration models are effective. (2) Compared to specialized models, ChatGPT performs poorly in predicting sentence duration. One reason for this is the instability of ChatGPT’s predictions, which sometimes produce extreme cases, such as overly short predicted durations. Although increasing the number of demonstration samples in the prompt and averaging multiple runs can mitigate this issue, it also significantly raises inference costs. (3) ByT5-based predictors and the duration predictor of FastSpeech 2 \cite{fastspeech2} demonstrate greater stability than AR-based phoneme duration predictors.  Considering both cost and simplicity, we recommend using the ByT5-based sentence duration predictor as default choice. Fig. \ref{fig:du-vis} illustrates how SimpleSpeech 2 can synthesize diverse prosodies using different sentence durations.
+
+### 5.6.Ablation study: Architecture and Formulation
+
+> In this section, we validate the effectiveness of our architecture design, specifically the Time-MoE module, and our flow-based diffusion formulation. The results, as presented in Table \ref{tab:ablation-arche}, demonstrate the efficacy of the Time-MoE design and the flow-based diffusion approach.
+
+### 5.7.The Influence of Classifier Free Guidance
+
+> We also explore the effectiveness of classifier-free guidance (CFG), as documented in Table \ref{tab:cfc}, which presents the experimental results. These findings reveal that the CFC strategy significantly influences generation performance. For example, omitting the CFG strategy (by setting $\lambda=1$) results in decreased performance. Furthermore, different parameter configuration also influences the performance. In this study, we default set $\lambda=5$ for experiments.
+
+### 5.8.The Ablation Study of Diffusion Steps
+
+> Table \ref{tab:step} shows the generation performance when we use different diffusion steps. We can see that using more diffusion steps can improve the generation performance, but also sacrificing the inference time. In our study, we find that 25 diffusion step is good enough to obtain good generation performance.
+
+### 5.9.SimpleSpeech 2-MUL: Extending to multilingual TTS
+
+> Thanks to the ByT5 text encoder, SimpleSpeech 2 supports multilingual text-to-speech synthesis. Specifically, we trained SimpleSpeech 2-MUL using Chinese and English datasets. For inference, we selected 30 sentences from the AISHELL 3 dataset to evaluate Chinese TTS performance. We compared our model with ChatTTS, which is trained on a large-scale Chinese dataset. As shown in Table \ref{tab:mul}, our model achieves comparable performance to ChatTTS. However, we recognize that there is still room for improvement in the robustness of our model on the Chinese dataset. One potential factor is the direct input of Chinese words into the ByT5 model, which complicates modeling due to the prevalence of polyphones in Chinese. We hypothesize that expanding to a larger dataset could enhance pronunciation accuracy. Additionally, our model demonstrates the ability to produce natural code-switched speech; for more details, please visit our demo page.
+
 ## 6.Conclusions: 结论
 
 > In this study, we introduce ***SimpleSpeech2***, an enhanced TTS system building upon our previous work. 
