--- a/Books/2024.02_PyTorch_Speech_Recognition_Practice/Ch12.理论_多模态语音转换模型基础.md
+++ b/Books/2024.02_PyTorch_Speech_Recognition_Practice/Ch12.理论_多模态语音转换模型基础.md
@@ -150,7 +150,38 @@ $$
 
 #### 2.基于 RNN-T 架构的语音模型方案
 
+**Recurrent Neural Network Transducer (RNN-T)** 是在 CTC 的基础上进一步发展和改进的模型.
+**CTC 模型的一个主要缺点是并未考虑输出之间的依赖性**. 这意味着在 CTC 模型中, 当前帧和之前帧是完全独立的, 没有任何关联性.
+
+RNN-T 在 CTC 模型的编码器基础上, 引入了一个新的组件: 预测网络 (Prediction Network), 它是一个将之前的输出作为输入的 RNN. 这个预测网络的隐藏向量与编码器得到的向量被一同放入一个联合网络 (Joint Network) 中.
+从这个联合网络中, 我们得到了中间层的计算结果 $Z_i$, 再传递到 Softmax 层, 进而得到对应类别的概率.
+
+整体模型的结构如下:
+
+![](Images/Ch12_RNN-T.svg)
+
+相较于传统模型, RNN-T 模型的训练速度更快, 模型体积更小, 同时保持了可比的准确率.
+最近谷歌也将该模型进行了压缩, 并成功应用到了语音输入法 Gboard 上.
+
 #### 3.基于 LAS 架构的语音模型方案
+
+Listen Attend and Spell (LAS) 和 CTC, RNN-T 的思路有所不同.
+它利用了注意力机制来实现有效的对齐.
+
+LAS 模型主要由两大部分组成:
+
+- Listener: 即 Encoder, 利用多层 RNN 从输入序列提取隐藏特征.
+- Attend and Spell: 即 Attention 用来得到 Context Vector, Decoder 利用 Context Vector 以及之前的输出来产生相应的最终输出.
+
+LAS 的模型结构如图所示:
+
+LAS 模型由于考虑了上下文的所有信息, 因此它的精确度可能较其他模型略高, 但是程序编写较为复杂, 可能受限于算法设计者的水平.
+
+#### 小结
+
+以上三种是较为经典的语音转文本模型, 此模型在一定程度上解决了针对语音转换模型的问题, 但是受限于当时的科研人员的认知, 即使是最先进的 LAS 模型, 都依旧沿袭编码器-解码器这一经典的语言翻译模型的基本架构, 即输入序列 X → Encoder → 语义编码 c → 解码器 → 输出序列 Y.
+
+但是随着研究者对深度学习认识的加强, 以单解码器进行语音-文本翻译, 以及基于单解码器的多模态融合可以更好地完成项目要求, 并且在训练形式上, 由于只存在解码器, 也能够更为准确地捕捉输入信号的特征, 因此单解码器的翻译模型成为未来发展的重要方向, 其主要代表就是智谱 AI 推出的 GLM 系列模型架构.
 
 ## 12.2.基于 GLM 架构的多模态语音文本转换模型
 
