--- a/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
@@ -138,6 +138,55 @@
 
 ## 3.Methodology: 方法
 
+> In this section, we propose X-codec, a straightforward yet effective method to overcome the semantic shortcomings of the current acoustic codecs. 
+
+### Acoustic Audio codec
+
+> As illustrated in Figure \ref{fig_xcodec}, our model builds upon the framework established by existing acoustic codecs such as Encodec \cite{defossez2022high} and DAC\cite{kumar2024high}. 
+> An acoustic audio codec is composed of three main components: an acoustic encoder, a quantizer, and an acoustic decoder. 
+> The input of the codec is the raw waveform $\textbf{X} \in \mathbb{R}^{n}$, where $n$ represents the number of waveform samples. 
+> This waveform is fed into the acoustic encoder, which consists of several convolutional layers and employs temporal downscaling to extract frame-level latent acoustic features $\textbf{A} \in \mathbb{R}^{H_a \times T}$, where $H_a$ denotes the hidden size of the acoustic features and $T$ is the number of frames. 
+> These continuous features are then transformed into a series of discrete tokens $\textbf{Q} \in \mathbb{R}^{M \times T}$ using a Residual Vector Quantizer (RVQ) with $M$ quantizer layers. 
+> During training, a specific codebook for the quantizer is learned, enabling the conversion of discrete tokens back to continuous features $\textbf{A}_q \in \mathbb{R}^{H_a \times T}$. 
+> The acoustic decoder then reconstructs the waveform $\hat{\textbf{X}}$ from $\textbf{A}_q$ using several convolutional layers and temporal upsampling. 
+> The training process is supervised using various losses, including mel loss, STFT loss, and GAN loss, to ensure high-quality acoustic reconstruction.
+
+### Analysing Semantic Shortcoming
+
+> In this section, we investigate the impact of acoustic codecs on the performance of audio LLMs, focusing specifically on VALL-E, a pioneering model that leverages language model principles for text-to-speech. 
+> Our analysis reveals that training VALL-E using Encodec results in high word error rates (WER) and frequent inaccuracies in content generation. 
+> For example, when the input text ``he passed through Henley Saint Albans and came so near to London as Harrow on the Hill'' is synthesized, it is erroneously produced as ``he passed through henley saint albeans and camsel knew to lunglan as herold the lor''. 
+> This misinterpretation, which is beyond simply improving the audio quality, suggests a fundamental limitation in Encodec's ability to differentiate phonemes, possibly due to its inadequate semantic processing capabilities.
+>
+> To substantiate the above hypothesis, we conducted Phonetic Discriminability ABX Tests to evaluate the phonetic discriminability of Encodec's representations. 
+> The details are provided in the experiment section. 
+> Our findings reveal that Encodec's representations exhibit poor phonetic discriminability, which confirms the presence of semantic inadequacies in the codec. 
+> Based on these results, we assert that these semantic shortcomings are a significant contributing factor to the observed inaccuracies of language model based audio generation. 
+>
+> To effectively address these semantic limitations, we introduce a novel approach that integrates more comprehensive semantic features into the codec's architecture. 
+> This enhancement is designed to enrich the codec's understanding of audio content, thereby alleviating the interpreting load on the language model. 
+> Detailed elaboration of this method is provided in the subsequent section.
+
+### Designing Auxiliary Semantic Module
+
+> Our approach employs a straightforward method that enhances audio codecs by directly concatenating semantic and acoustic features. 
+> Initially, we extract the semantic feature vector $\textbf{S}^* \in \mathbb{R}^{H_s \times T}$ from the audio waveform $\textbf{x}$. 
+> This extraction utilizes a self-supervised, pre-trained model such as HuBERT \cite{hsu2021hubert} or wav2vec 2.0 \cite{baevski2020wav2vec}. 
+> The extracted features are then processed through multiple convolutional layers within a semantic encoder to yield the refined semantic feature vector $\textbf{S}$. 
+> Concurrently, the acoustic branch produces the feature $\textbf{A}$. 
+> These outputs, $\textbf{S}$ and $\textbf{A}$, are subsequently concatenated using a linear projection $\phi$, formulated as:
+
+$$
+\textbf{U} =  concat(\phi_s(\textbf{A}), \phi_a(\textbf{S})) ,
+$$
+
+> where the concatenated feature $\textbf{U} \in \mathbb{R}^{H_u \times T}$ is designed to maximize information preservation from both semantic and acoustic sources. 
+> This combined feature is then subject to RVQ using an $M$-layer quantizer, resulting in tokens that encapsulate a rich mixture of semantic and acoustic information.
+>
+> The quantized feature $\textbf{U}_q$ is designed to meet the decoder's objectives through two projectors, $\beta_s$ and $\beta_a$, which enable the decoders to reconstruct the original semantic feature $\hat{\textbf{S}}^*$ and the audio waveform $\hat{\textbf{x}}$. 
+> We adhere to established acoustic reconstruction methods from previous works while introducing a Mean Squared Error (MSE) loss specifically for the reconstruction of semantic features. 
+> Furthermore, a constant weight $\gamma$ is applied to the semantic loss to ensure that its scale is aligned with other losses, thus promoting a balanced training objective.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
