Update X-Codec links

--- a/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
@@ -62,19 +62,19 @@
 ## 1.Introduction: 引言
 
 > In recent years, Large Language Models (LLMs) such as GPT \cite{brown2020language} have demonstrated remarkable capabilities in modeling complex, high-dimensional data across various domains, including text and image generation \cite{zhao2023survey,liu2024visual}. 
-> Inspired by these successes, there has been significant interest \cite{agostinelli2023musiclm,borsos2023audiolm,wang2023neural,yang2023uniaudio} in exploring the application of LLMs to audio generation.
+> Inspired by these successes, there has been significant interest ([MusicLM](../Speech_LLM/2023.01.26_MusicLM.md); [AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md)) in exploring the application of LLMs to audio generation.
 >
-> Audio codecs \cite{zeghidour2021soundstream} have emerged as a critical technique for audio LLMs, bridging the gap between continuous audio waveforms and token-based language models. 
+> Audio codecs ([SoundStream](2021.07.07_SoundStream.md)) have emerged as a critical technique for audio LLMs, bridging the gap between continuous audio waveforms and token-based language models. 
 > By discretizing high-rate audio signals into a finite set of tokens, these codecs enable the application of LLM architectures to audio data, leveraging the successes of textual LLMs. 
 >
-> However, prior research on audio codecs has primarily focused on achieving lower compression rates and higher reconstruction quality \cite{kumar2024high,defossez2022high,yang2023hifi}. 
+> However, prior research on audio codecs has primarily focused on achieving lower compression rates and higher reconstruction quality ([DAC](2023.06.11_Descript-Audio-Codec.md); [EnCodec](2022.10.24_EnCodec.md); [HiFi-Codec](2023.05.04_HiFi-Codec.md)). 
 > Meanwhile, many efforts in audio generation have concentrated on enhancing model architecture, scaling, or leveraging larger datasets. 
-> For instance, AudioLM \cite{borsos2023audiolm} adopts a two-stage pipeline that models the acoustic token in an autoregressive way conditioned on the semantic token. 
-> VALL-E \cite{wang2023neural}, the first TTS framework to leverage large, diverse, and multi-speaker speech data, demonstrates strong in-context learning capabilities similar to GPT-3, treating TTS as a language modeling task on audio codecs. 
-> MusicGen \cite{copet2024simple} generates music using a single-stage transformer LM alongside efficient token interleaving patterns. 
-> Similarly, UniAudio \cite{yang2023uniaudio} scaled up to 165K hours of audio and 1B parameters, utilizing LLM techniques to generate tokens for various types of audio, including speech, sounds, music, and singing, given different input conditions.
+> For instance, [AudioLM](../Speech_LLM/2022.09.07_AudioLM.md) adopts a two-stage pipeline that models the acoustic token in an autoregressive way conditioned on the semantic token. 
+> [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), the first TTS framework to leverage large, diverse, and multi-speaker speech data, demonstrates strong in-context learning capabilities similar to GPT-3, treating TTS as a language modeling task on audio codecs. 
+> [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md) generates music using a single-stage transformer LM alongside efficient token interleaving patterns. 
+> Similarly, [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md) scaled up to 165K hours of audio and 1B parameters, utilizing LLM techniques to generate tokens for various types of audio, including speech, sounds, music, and singing, given different input conditions.
 >
-> While these works have shown success in developing audio language models, they all rely on the acoustic codecs such as Encodec \cite{defossez2022high} or Soundstream \cite{zeghidour2021soundstream} for audio tokenization and de-tokenization. 
+> While these works have shown success in developing audio language models, they all rely on the acoustic codecs such as [EnCodec](2022.10.24_EnCodec.md) or [SoundStream](2021.07.07_SoundStream.md) for audio tokenization and de-tokenization. 
 > However, these acoustic codecs were originally designed for audio compression rather than for audio language models. 
 > This misalignment means the design may not be optimal for audio language modeling.
 >
@@ -84,10 +84,10 @@
 > However, most audio codecs focus on acoustic reconstruction which ignores the semantic information. 
 > As a result, LLM essentially tries to predict the local fluctuations of the audio signal, which is difficult, and methods like VALL-E, which condition acoustic token generation on text transcriptions, frequently result in content inaccuracies causing elevated word error rates (WER), stemming from the semantic misinterpretations of acoustic tokens, leading to word skipping and errors.
 >
-> To address this issue, approaches like SpeechTokenizer \cite{zhang2023speechtokenizer} have attempted to disentangle speech into separate tokens for content and timbre and perform distillation-based semantic and acoustic integration. 
-> However, this method may not integrate smoothly with all audio LLMs, especially those requiring uniform token treatment across different layers, such as utilizing flattened codec tokens \cite{yang2023uniaudio,copet2024simple}. 
+> To address this issue, approaches like [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) have attempted to disentangle speech into separate tokens for content and timbre and perform distillation-based semantic and acoustic integration. 
+> However, this method may not integrate smoothly with all audio LLMs, especially those requiring uniform token treatment across different layers, such as utilizing flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)). 
 >
-> In this paper, We propose a straightforward yet effective method termed `***X-Codec***`, which integrates both semantic and acoustic features into a unified tokenization framework. 
+> In this paper, We propose a straightforward yet effective method termed `X-Codec`, which integrates both semantic and acoustic features into a unified tokenization framework. 
 > The ***X-Codec*** architecture employs a distinctive `X-shaped` structure, characterized by two inputs and two outputs, unifying semantic and acoustic information within a single Residual Vector Quantizer (RVQ) structure. 
 > This design enables simultaneous embedding learning of semantic richness and acoustic fidelity for every token, resulting in better performance for audio LLM. 
 >
@@ -99,17 +99,17 @@
 
 ### Audio Language Model
 
-> The success of Large Language Models (LLMs) has sparked a significant trend in leveraging language foundation models for audio generation tasks \cite{rubenstein2023audiopalm,zhang2024speechlm,wu2023decoder,wu2023speechgen,yang2023uniaudio,chen2023lauragpt}. 
+> The success of Large Language Models (LLMs) has sparked a significant trend in leveraging language foundation models for audio generation tasks ([AudioPaLM](../Speech_LLM/2023.06.22_AudioPaLM.md); zhang2024speechlm,wu2023decoder,wu2023speechgen,[UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md)). 
 > Audio, much like language, consists of variable-length sequences, making it well-suited for modeling with language foundation models. 
-> One pioneering method, AudioLM \cite{borsos2023audiolm}, employs a multi-stage strategy to harness the predictive capabilities of foundation models for generating tokens unconditionally. 
+> One pioneering method, [AudioLM](../Speech_LLM/2022.09.07_AudioLM.md), employs a multi-stage strategy to harness the predictive capabilities of foundation models for generating tokens unconditionally. 
 > This approach involves predicting semantic tokens from various conditions (e.g., phonemes, text descriptions, MIDI) in the initial stage, followed by transforming them into acoustic tokens through coarse-to-fine modeling, ultimately generating the waveform. 
-> Representative systems such as SPEAR-TTS \cite{kharitonov2023speak} for speech synthesis and MusicLM \cite{agostinelli2023musiclm} for music generation have also been proposed. 
+> Representative systems such as [SPEAR-TTS](../Speech_LLM/2023.02.07_SPEAR-TTS.md) for speech synthesis and [MusicLM](../Speech_LLM/2023.01.26_MusicLM.md) for music generation have also been proposed. 
 > However, the two-stage process can lead to complexity in training and suboptimal performance due to the separate development of semantic and acoustic tokens, leading to error accumulation.
 >
 > Conversely, recent advancements have shown that methods employing a single-stage language model outperform two-stage approaches. 
-> For example, VALL-E \cite{wang2023neural} utilizes an autoregressive (AR) model to predict the first token and a non-autoregressive (NAR) model to estimate the residual tokens, demonstrating superior performance compared to AudioLM. 
-> Similarly, MusicGen \cite{copet2024simple} employs a single-stage transformer language model and incorporates a delay pattern strategy for efficient token interleaving, achieving better results than MusicLM. 
-> Other notable works include CLAM-TTS \cite{kim2024clam}, VoiceCraft \cite{peng2024voicecraft}, and UniAudio \cite{yang2023uniaudio}.
+> For example, [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) utilizes an autoregressive (AR) model to predict the first token and a non-autoregressive (NAR) model to estimate the residual tokens, demonstrating superior performance compared to AudioLM. 
+> Similarly, [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md) employs a single-stage transformer language model and incorporates a delay pattern strategy for efficient token interleaving, achieving better results than MusicLM. 
+> Other notable works include [CLAM-TTS](../Speech_LLM/2024.04.03_CLaM-TTS.md), [VoiceCraft](../Speech_LLM/2024.03.25_VoiceCraft.md), and [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md).
 >
 > Despite recent advancements, directly modeling the intricate low-level acoustic fluctuations with an LLM poses challenges. 
 > LLMs are primarily designed for processing natural language, which is inherently rich in semantics. 
@@ -118,19 +118,19 @@
 
 ### Audio Codec
 
-> Recent advancements have seen a surge in deep learning methodologies employing vector quantization \cite{van2017neural} to reconstruct continuous signals into discrete representations for AR generation. 
-> Notably, audio codecs based on the VQ-GAN framework \cite{esser2021taming} have gained prominence. 
-> For example, SoundStream \cite{zeghidour2021soundstream} introduces a versatile codec adaptable to various audio types, integrating Residual Vector Quantization (RVQ) and Generative Adversarial Network (GAN) to refine quantization and reconstruction. 
-> Similarly, Encodec \cite{defossez2022high} enhances compression through a multi-scale discriminator and a loss-balancing strategy alongside a language model. 
-> HiFi-Codec \cite{yang2023hifi} employs Group-Residual Vector Quantization (GRVQ) to minimize the need for extensive codebooks while maintaining high reconstruction fidelity. 
-> DAC \cite{kumar2024high} addresses codebook collapse, where some codes remain unused, by applying improved codebook learning to achieve higher compression rates.
+> Recent advancements have seen a surge in deep learning methodologies employing vector quantization ([VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md)) to reconstruct continuous signals into discrete representations for AR generation. 
+> Notably, audio codecs based on the [VQ-GAN](../_Basis/2020.12.17_VQGAN.md) framework have gained prominence. 
+> For example, [SoundStream](2021.07.07_SoundStream.md) introduces a versatile codec adaptable to various audio types, integrating Residual Vector Quantization (RVQ) and Generative Adversarial Network (GAN) to refine quantization and reconstruction. 
+> Similarly, [EnCodec](2022.10.24_EnCodec.md) enhances compression through a multi-scale discriminator and a loss-balancing strategy alongside a language model. 
+> [HiFi-Codec](2023.05.04_HiFi-Codec.md) employs Group-Residual Vector Quantization (GRVQ) to minimize the need for extensive codebooks while maintaining high reconstruction fidelity. 
+> [DAC](2023.06.11_Descript-Audio-Codec.md) addresses codebook collapse, where some codes remain unused, by applying improved codebook learning to achieve higher compression rates.
 >
 > These codecs primarily focus on acoustic reconstruction and higher compression rates, often overlooking their potential as tokenizers for audio LLMs. 
 > Some attempts have been made to develop more suitable tokenizers for audio LLMs. 
-> For example, SpeechTokenizer \cite{zhang2023speechtokenizer} utilizes HuBERT to separate speech into distinct VQ components for content and timbre/acoustic details. 
+> For example, [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) utilizes HuBERT to separate speech into distinct VQ components for content and timbre/acoustic details. 
 > This separation improves the modeling of content in the AR stage of VALL-E, while the NAR stage enriches the acoustic details. 
-> However, a distillation framework is exploited, this makes SpeechTokenizer may not be compatible with all LLM architectures, especially those that require uniform treatment of tokens, such as methods using flattened codec tokens \cite{yang2023uniaudio,copet2024simple}. 
-> Another attempt is presented by SemantiCodec \cite{liu2024semanticodec}, which employs a pre-trained AudioMAE \cite{huang2022masked} to generate distinct semantic and acoustic tokens from mel-spectrograms. 
+> However, a distillation framework is exploited, this makes SpeechTokenizer may not be compatible with all LLM architectures, especially those that require uniform treatment of tokens, such as methods using flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)). 
+> Another attempt is presented by [SemantiCodec](SemantiCodec.md), which employs a pre-trained [AudioMAE](../_tmp/AudioMAE.md) to generate distinct semantic and acoustic tokens from mel-spectrograms. 
 > However, this method inherits the issues of SpeechTokenizer and introduces additional complexity in token modeling. 
 > Moreover, since the audioMAE is performed on 2D time-frequency mel-spectrograms, LLMs must effectively handle dual scales (time and frequency), which may require significant modifications to existing LLM structures.
 >
@@ -142,7 +142,7 @@
 
 ### Acoustic Audio codec
 
-> As illustrated in Figure \ref{fig_xcodec}, our model builds upon the framework established by existing acoustic codecs such as Encodec \cite{defossez2022high} and DAC\cite{kumar2024high}. 
+> As illustrated in Figure \ref{fig_xcodec}, our model builds upon the framework established by existing acoustic codecs such as [EnCodec](2022.10.24_EnCodec.md) and [DAC](2023.06.11_Descript-Audio-Codec.md). 
 > An acoustic audio codec is composed of three main components: an acoustic encoder, a quantizer, and an acoustic decoder. 
 > The input of the codec is the raw waveform $\textbf{X} \in \mathbb{R}^{n}$, where $n$ represents the number of waveform samples. 
 > This waveform is fed into the acoustic encoder, which consists of several convolutional layers and employs temporal downscaling to extract frame-level latent acoustic features $\textbf{A} \in \mathbb{R}^{H_a \times T}$, where $H_a$ denotes the hidden size of the acoustic features and $T$ is the number of frames. 
@@ -171,7 +171,7 @@
 
 > Our approach employs a straightforward method that enhances audio codecs by directly concatenating semantic and acoustic features. 
 > Initially, we extract the semantic feature vector $\textbf{S}^* \in \mathbb{R}^{H_s \times T}$ from the audio waveform $\textbf{x}$. 
-> This extraction utilizes a self-supervised, pre-trained model such as HuBERT \cite{hsu2021hubert} or wav2vec 2.0 \cite{baevski2020wav2vec}. 
+> This extraction utilizes a self-supervised, pre-trained model such as [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md) or [wav2vec 2.0](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md). 
 > The extracted features are then processed through multiple convolutional layers within a semantic encoder to yield the refined semantic feature vector $\textbf{S}$. 
 > Concurrently, the acoustic branch produces the feature $\textbf{A}$. 
 > These outputs, $\textbf{S}$ and $\textbf{A}$, are subsequently concatenated using a linear projection $\phi$, formulated as:
