--- a/Models/TTS3_Vocoder/2024.09.03_Vec2Wav2.0.md
+++ b/Models/TTS3_Vocoder/2024.09.03_Vec2Wav2.0.md
@@ -68,8 +68,8 @@
 > Whether timbre is intentionally or unintentionally removed in these tokens, they can act as content representations and thus be utilized in the recognition-synthesis VC paradigm~\cite{huang2022s3prl}.
 >
 > Throughout the history, VC methods with a continuous feature space have been researched with depth.
-> The AutoVC series of work~\cite{qian2019autovc,qian2020unsupervised,chan2022speechsplit2} attempt to decouple speech attributes via autoencoder bottlenecks.
-> VC with advanced generative algorithms has then achieved remarkable results, such as normalizing flows ([YourTTS [16]](../E2E/2021.12.04_YourTTS.md); merritt2022text,li2023freevc) and diffusion models (diffvc, choi2023diff,choi2024dddm).
+> The AutoVC series of work ([AutoVC [13]](../Voice_Conversion/AutoVC.md); qian2020unsupervised; [SpeechSplit2.0 [15]](../_tmp/SpeechSplit2.0.md)) attempt to decouple speech attributes via autoencoder bottlenecks.
+> VC with advanced generative algorithms has then achieved remarkable results, such as normalizing flows ([YourTTS [16]](../E2E/2021.12.04_YourTTS.md); merritt2022text, [FreeVC [18]](../Voice_Conversion/2022.10.27_FreeVC.md)) and diffusion models (diffvc, choi2023diff,choi2024dddm).
 > After the rise of speech SSL methods, researchers begin to apply SSL features in VC ~\cite{huang2022s3prl,hussain2023ace,knnvc,neekhara2023selfvc} where the rich phonetic content information from SSL features are utilized.
 >
 > But continuous features make it hard to integrate VC with LLMs and thus an isolated step with other speech-related tasks.
@@ -93,7 +93,8 @@
 > The resulting model, ***vec2wav 2.0***, is then a discrete token vocoder with strong timbre controlling abilities while retaining the content and styles from the content discrete tokens.
 > In general, ***vec2wav 2.0*** has the following advantages:
 > - **Unity**. ***vec2wav 2.0*** unifies speech discrete token re-synthesis and VC into the same framework of prompted vocoders.
-> - **Simplicity**. ***vec2wav 2.0*** does not need any labeled data to train. The only data assumption is utterances are segmented into single-speaker ones. 
+> - **Simplicity**. ***vec2wav 2.0*** does not need any labeled data to train. 
+> The only data assumption is utterances are segmented into single-speaker ones. 
 The training criterion is also simple enough, without additional losses for decoupling.
 > - **Competitiveness**. ***vec2wav 2.0*** achieves superior any-to-any VC performance even compared to continuous VC methods. 
 Furthermore, though only trained on English corpus, ***vec2wav 2.0*** shows remarkable cross-lingual VC performance.
@@ -111,7 +112,7 @@ Furthermore, though only trained on English corpus, ***vec2wav 2.0*** shows rema
 > The overall architecture inherits the frontend-generator framework of CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)), where the input discrete speech tokens are first fed to a Conformer-based frontend module to soften the discreteness, before a vocoder generator that finally outputs the realistic waveforms.
 > The acoustic prompt brings sufficient timbre information into the process of speech re-synthesis.
 > We first extract prompt embeddings through a pretrained [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) model, then use a CNN pre-net to process the hidden embeddings.
-> In the frontend module, the prompt embeddings are utilized by the position-agnostic cross-attention mechanism~\cite{[UniCATS [3]](../_tmp/UniCATS.md); li2024sef}, which does not apply positional encoding to the query sequence.
+> In the frontend module, the prompt embeddings are utilized by the position-agnostic cross-attention mechanism ([UniCATS [3]](../_tmp/UniCATS.md); li2024sef), which does not apply positional encoding to the query sequence.
 > This special cross attention mechanism simulates shuffling the query sequence and inherently breaks the local patterns in the reference prompt, e.g. linguistic and prosodic features, which enables more accurate learning of target timbre as some global information.
 >
 > After timbre is preliminarily merged into the frontend, we design an adaptive [BigVGAN [31]](2022.06.09_BigVGAN.md) generator to further incorporate the timbre embedding in waveform generation. 
@@ -120,9 +121,11 @@ Furthermore, though only trained on English corpus, ***vec2wav 2.0*** shows rema
 ### 3.2.Adaptive Snake Activation: 自适应蛇形激活函数
 
 > The Snake activation function is proposed in \cite{snake} for modeling periodical inductive bias, which is then adopted in the BigVGAN vocoder to achieve state-of-the-art performance.
-> This activation function can be represented as $f_\theta(x)=x+\frac1\beta\sin^2(\alpha x)$. The learnable parameters $\theta=\{\alpha,\beta\}$ are designed to control the frequency and magnitude respectively, and $f_\theta$ can operate on each input channel independently, i.e. different $\theta$ for each input channel.
+> This activation function can be represented as $f_\theta(x)=x+\frac1\beta\sin^2(\alpha x)$. 
+> The learnable parameters $\theta=\{\alpha,\beta\}$ are designed to control the frequency and magnitude respectively, and $f_\theta$ can operate on each input channel independently, i.e. different $\theta$ for each input channel.
 >
-> As this Snake activation can subtly capture the periodical pattern in the speech signals, we propose to inject more information from the target speaker timbre. Let $\bm s\in\mathbb R^d$ be some representative speaker embedding extracted from the target speaker, we design an adaptive Snake activation where the frequency and magnitude of sinusoidal function are both affected by $\bm s$:
+> As this Snake activation can subtly capture the periodical pattern in the speech signals, we propose to inject more information from the target speaker timbre. 
+> Let $\bm s\in\mathbb R^d$ be some representative speaker embedding extracted from the target speaker, we design an adaptive Snake activation where the frequency and magnitude of sinusoidal function are both affected by $\bm s$:
 
 $$
 \begin{aligned}
@@ -131,7 +134,8 @@ $$
 \end{aligned}
 $$
 
-> where $T$ is a linear transform followed by $\tanh$ activation, and operations in \eqref{eq:adaptive-snake} are all element-wise. $T(\bm s)$ is discounted by $1/2$ on the magnitude part for numerical stability. To save parameters, we apply the same $T$ transformation to both magnitude and frequency. 
+> where $T$ is a linear transform followed by $\tanh$ activation, and operations in \eqref{eq:adaptive-snake} are all element-wise. $T(\bm s)$ is discounted by $1/2$ on the magnitude part for numerical stability. 
+> To save parameters, we apply the same $T$ transformation to both magnitude and frequency. 
 >
 > In this way, the learnable parameter for each adaptive Snake is $\theta=\{\bm\alpha,\bm\beta,W,\bm b\}$, and the target timbre information can be effectively injected in every layer of the vocoder via adaptive activations, with strengthens the timbre controllability to a considerable extent.
 >
@@ -159,12 +163,15 @@ $$
 
 #### Prompt Features
 
-> Following CTX-vec2wav, the reference prompt segment is randomly cut from the current utterance, to maintain the same speaker identity without labeled data. Instead of using mel-spectrogram to provide timbre information from the reference prompt, we use a pretrained [WavLM [11]](../Speech_Representaion/2021.10.26_WavLM.md) model as a timbre feature extractor owing to its widely-verified advantage on speaker verification~\cite{jung2024espnet,superb}. We freeze the [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) model in training and only use the output feature at a certain location of its Transformer blocks.
+> Following CTX-vec2wav, the reference prompt segment is randomly cut from the current utterance, to maintain the same speaker identity without labeled data. 
+> Instead of using mel-spectrogram to provide timbre information from the reference prompt, we use a pretrained [WavLM [11]](../Speech_Representaion/2021.10.26_WavLM.md) model as a timbre feature extractor owing to its widely-verified advantage on speaker verification~\cite{jung2024espnet,superb}. 
+> We freeze the [WavLM](../Speech_Representaion/2021.10.26_WavLM.md) model in training and only use the output feature at a certain location of its Transformer blocks.
 > In practice, we use the 6th layer of [WavLM](../Speech_Representaion/2021.10.26_WavLM.md)-Large model as early layers are proven to contain rich timbre information~\cite{knnvc}.
 
 ### 3.4.Discriminators and Training Criterion
 
-> We inherit the multi-scale discriminators (MSD) and multi-period discriminators (MPD) from [HiFi-GAN [38]](2020.10.12_HiFi-GAN.md). These discriminators are jointly trained with the generator to distinguish fake signals from real ones in multiple scales and periods. 
+> We inherit the multi-scale discriminators (MSD) and multi-period discriminators (MPD) from [HiFi-GAN [38]](2020.10.12_HiFi-GAN.md). 
+> These discriminators are jointly trained with the generator to distinguish fake signals from real ones in multiple scales and periods. 
 > With the generator adversarially trained to fool the discriminators, we achieve high-fidelity speech re-synthesis and VC results.
 > Different from some current VC models that often suffer from audio quality issues, ***vec2wav 2.0*** ensures the audio quality of speech signals by GAN training.
 >
@@ -187,7 +194,7 @@ $$
 
 ### Data & Model Setup
 
-> We use all the train splits of LibriTTS~\cite{libritts}, an English corpus with 585 hours of 24kHz speech data spoken by around 2500 speakers, to train ***vec2wav 2.0***.
+> We use all the train splits of [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md), an English corpus with 585 hours of 24kHz speech data spoken by around 2500 speakers, to train ***vec2wav 2.0***.
 > We only keep utterances from 6s to 30s to ensure proper prompt lengths.
 > The resulting training set has around 360 hours.
 > The prompt segment is cut starting from a random point within 1 second of either the beginning or the end of an utterance, extending inward towards the middle, with its length randomly sampled between one third and one half of the original utterance's duration.
@@ -202,12 +209,14 @@ $$
 > The prompt prenet has four CNN blocks with scaled residual connections, where the hidden dimensions are 128, 256 and 512 before being fed to cross attentions.
 > The resulting generator model has 40.3M parameters.
 >
-> The whole model is trained for 1 million steps on 4 NVIDIA A10 GPUs with a maximum batch capacity of 36s speech data per device. Other hyper-parameters follow CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)).
+> The whole model is trained for 1 million steps on 4 NVIDIA A10 GPUs with a maximum batch capacity of 36s speech data per device. 
+> Other hyper-parameters follow CTX-vec2wav ([UniCATS [3]](../_tmp/UniCATS.md)).
 
 ### Evaluation
 
 > We conduct English any-to-any VC comparisons using the unseen speakers in the LibriTTS test-clean split.
-> We randomly select 10 speakers, from each of whom 2 utterances are chosen to be the source utterances. Another 10 speakers are selected as target speakers with one 3-second reference utterance for each.
+> We randomly select 10 speakers, from each of whom 2 utterances are chosen to be the source utterances. 
+> Another 10 speakers are selected as target speakers with one 3-second reference utterance for each.
 > This yields a test set of 200 any-to-any VC cases.
 >
 > To measure the performance of VC systems, we adopt multi-faceted metrics that contain both objective and subjective ones:
@@ -229,7 +238,7 @@ $$
 > FACodec is capable of converting voices by simply replacing the speaker embedding into the target speaker and then decoding into waveform.
 > We discard the detail tokens in FACodec for VC since we find these tokens still contain considerable speaker information that harms VC performance.
 > We use the official implementation and checkpoints for all baselines.
-> Note that the training data in all baselines either includes LibriTTS or is magnitudes larger (e.g. FACodec), so the comparisons are fair enough.
+> Note that the training data in all baselines either includes LibriTTS or is magnitudes larger (e.g. [FACodec](../Speech_Neural_Codec/2024.03.05_FACodec.md)), so the comparisons are fair enough.
 
 ## 5.Results: 结果
 
