Update X-Codec Link

--- a/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
@@ -138,7 +138,7 @@
 > For example, [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) utilizes [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md) to separate speech into distinct VQ components for content and timbre/acoustic details. 
 > This separation improves the modeling of content in the AR stage of [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), while the NAR stage enriches the acoustic details. 
 > However, a distillation framework is exploited, this makes [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) may not be compatible with all LLM architectures, especially those that require uniform treatment of tokens, such as methods using flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)). 
-> Another attempt is presented by [SemantiCodec](SemantiCodec.md), which employs a pre-trained [AudioMAE](../_tmp/AudioMAE.md) to generate distinct semantic and acoustic tokens from mel-spectrograms. 
+> Another attempt is presented by [SemantiCodec](2024.04.30_SemantiCodec.md), which employs a pre-trained [AudioMAE](../_tmp/AudioMAE.md) to generate distinct semantic and acoustic tokens from mel-spectrograms. 
 > However, this method inherits the issues of [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) and introduces additional complexity in token modeling. 
 > Moreover, since the audioMAE is performed on 2D time-frequency mel-spectrograms, LLMs must effectively handle dual scales (time and frequency), which may require significant modifications to existing LLM structures.
 >
