--- a/Models/Speech_Neural_Codec/2024.06.18_Articulatory_Encodec.md
+++ b/Models/Speech_Neural_Codec/2024.06.18_Articulatory_Encodec.md
@@ -5,15 +5,20 @@
 
 - 标题: Articulatory Encodec: Vocal Tract Kinematics as a Codec for Speech
 - 作者:
-  - Cheol Jun Cho
-  - Peter Wu
-  - Tejas S. Prabhune
-  - Dhruv Agarwal
-  - Gopala K. Anumanchipalli
+  | 序号 | 作者 | 机构 |
+  | :-: | --- | --- |
+  | 01 | [Cheol Jun Cho](../../Authors/Cheol_Jun_Cho.md) | [UC Berkeley](../../Institutions/USA-UCBerkeley_美国加州伯克利大学.md) |
+  | 02 | [Peter Wu](../../Authors/Peter_Wu.md) | [UC Berkeley](../../Institutions/USA-UCBerkeley_美国加州伯克利大学.md) |
+  | 03 | [Tejas S. Prabhune](../../Authors/Tejas_S._Prabhune.md) | [UC Berkeley](../../Institutions/USA-UCBerkeley_美国加州伯克利大学.md) |
+  | 04 | [Dhruv Agarwal](../../Authors/Dhruv_Agarwal.md) | [UC Berkeley](../../Institutions/USA-UCBerkeley_美国加州伯克利大学.md) |
+  | 05 | [Gopala K. Anumanchipalli](../../Authors/Gopala_K._Anumanchipalli.md) | [UC Berkeley](../../Institutions/USA-UCBerkeley_美国加州伯克利大学.md) |
 - 机构:
-  - 机构 
+  | 序号 | 机构 | 占比 |
+  | :-: | --- | :-: |
+  | 01 | [UC Berkeley](../../Institutions/USA-UCBerkeley_美国加州伯克利大学.md) | 05/05 |
 - 时间:
   - 预印时间: 2024.06.18 ArXiv v1
+  - 预印时间: 2024.08.21 ArXiv v2
   - 更新笔记: 2024.08.07
 - 发表:
   - 期刊/会议 
