--- a/Models/Speech_LLM/2024.07.11_MELLE.md
+++ b/Models/Speech_LLM/2024.07.11_MELLE.md
@@ -5,21 +5,26 @@
 
 - 标题: Autoregressive Speech Synthesis without Vector Quantization
 - 作者:
-  - 01 [Lingwei Meng](../../Authors/Lingwei_Meng.md)
-  - 02 [Long Zhou](../../Authors/Long_Zhou_(周龙).md)
-  - 03 [Shujie Liu](../../Authors/Shujie_Liu_(刘树杰).md)
-  - 04 [Sanyuan Chen](../../Authors/Sanyuan_Chen_(陈三元).md)
-  - 05 [Bing Han](../../Authors/Bing_Han.md)
-  - 06 [Shujie Hu](../../Authors/Shujie_Hu.md)
-  - 07 [Yanqing Liu](../../Authors/Yanqing_Liu.md)
-  - 08 [Jinyu Li](../../Authors/Jinyu_Li_(李劲宇).md)
-  - 09 [Sheng Zhao](../../Authors/Sheng_Zhao_(赵胜).md)
-  - 10 [Xixin Wu](../../Authors/Xixin_Wu.md)
-  - 11 [Helen Meng](../../Authors/Helen_Meng_(蒙美玲).md)
-  - 12 [Furu Wei](../../Authors/Furu_Wei_(韦福如).md)
+- 作者:
+  | 序号 | 作者 | 机构 |
+  | :-: | --- | --- |
+  | 01 | [Lingwei Meng](../../Authors/Lingwei_Meng.md) | [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md) |
+  | 02 | [周龙 (Long Zhou)](../../Authors/Long_Zhou_(周龙).md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 03 | [刘树杰 (Shujie Liu)](../../Authors/Shujie_Liu_(刘树杰).md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 04 | [陈三元 (Sanyuan Chen)](../../Authors/Sanyuan_Chen_(陈三元).md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 05 | [Bing Han](../../Authors/Bing_Han.md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 06 | [Shujie Hu](../../Authors/Shujie_Hu.md) | [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md) |
+  | 07 | [Yanqing Liu](../../Authors/Yanqing_Liu.md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 08 | [李劲宇 (Jinyu Li)](../../Authors/Jinyu_Li_(李劲宇).md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 09 | [赵胜 (Sheng Zhao)](../../Authors/Sheng_Zhao_(赵胜).md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
+  | 10 | [Xixin Wu](../../Authors/Xixin_Wu.md) | [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md) |
+  | 11 | [蒙美玲 (Helen Meng)](../../Authors/Helen_Meng_(蒙美玲).md) | [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md) |
+  | 12 | [韦福如 (Furu Wei)](../../Authors/Furu_Wei_(韦福如).md) | [Microsoft](../../Institutions/USA-Microsoft.md) |
 - 机构:
-  - [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md)
-  - [Microsoft](../../Institutions/USA-Microsoft.md)
+  | 序号 | 机构 | 占比 |
+  | :-: | --- | :-: |
+  | 01 | [香港中文大学](../../Institutions/CHN-CUHK_香港中文大学.md) | 04/12 |
+  | 02 | [Microsoft](../../Institutions/USA-Microsoft.md) | 08/12 |
 - 时间:
   - 预印时间: 2024.07.11 ArXiv v1
   - 更新笔记: 2024.07.12
