Update SoundStream Info

--- a/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
+++ b/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
@@ -5,32 +5,46 @@
 
 - 标题: SoundStream: An End-to-End Neural Audio Codec
 - 作者:
-  - 01 [Neil Zeghidour](../../Authors/Neil_Zeghidour.md)
-  - 02 [Alejandro Luebs](../../Authors/Alejandro_Luebs.md)
-  - 03 [Ahmed Omran](../../Authors/Ahmed_Omran.md)
-  - 04 [Jan Skoglund](../../Authors/Jan_Skoglund.md)
-  - 05 [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
+  | 序号 | 作者 | 机构 |
+  | :-: | --- | --- |
+  | 01 | [Neil Zeghidour](../../Authors/Neil_Zeghidour.md) | [Research Google Inc.](../../Institutions/USA-Google.md) |
+  | 02 | [Alejandro Luebs](../../Authors/Alejandro_Luebs.md) | [Research Google Inc.](../../Institutions/USA-Google.md) |
+  | 03 | [Ahmed Omran](../../Authors/Ahmed_Omran.md) | [Research Google Inc.](../../Institutions/USA-Google.md) |
+  | 04 | [Jan Skoglund](../../Authors/Jan_Skoglund.md) | [Research Google Inc.](../../Institutions/USA-Google.md) |
+  | 05 | [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md) | [Research Google Inc.](../../Institutions/USA-Google.md) |
 - 机构:
-  - [Google Research](../../Institutions/USA-Google.md) 
+  | 序号 | 机构 | 占比 |
+  | :-: | --- | :-: |
+  | 01 | [Research Google Inc.](../../Institutions/USA-Google.md) | 05/05 |
 - 时间:
-  - 2021.07.07 ArXiv v1
-  - 2021.11.23 [IEEE TASLP](../../Publications/TASLP.md)
+  - 预印时间: 2021.07.07 ArXiv v1
+  - 更新笔记: 2024.09.05
+- 发表:
+  - [IEEE@TASLP.2021](../../Publications/TASLP.md)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2107.03312)
   - [DOI](https://doi.org/10.1109/TASLP.2021.3129994)
+  - [Github]()
   - [Demo](https://google-research.github.io/seanet/soundstream/examples/)
+  - [Scholar](https://scholar.google.com/scholar?cluster=14324220215339676174)
 - 标签:
-  - Codec (编解码器)
+  - 
 - 页数: 13
 - 引用: 68
-- 被引: 356
+- 被引: 471
+- 数据:
+  - ? 
+- 对比:
+  - ?
+- 复现:
+  - ?
 
 </details>
 
 ## 0·Abstract·摘要
 
 <details>
-<summary>原文</summary>
+<summary>展开原文</summary>
 
 > We present ***SoundStream***, a novel neural audio codec that can efficiently compress speech, music and general audio at bitrates normally targeted by speech-tailored codecs.
 > ***SoundStream*** relies on a model architecture composed by a fully convolutional encoder/decoder network and a residual vector quantizer, which are trained jointly end-to-end.
@@ -41,6 +55,14 @@
 > Moreover, we are able to perform joint compression and enhancement either at the encoder or at the decoder side with no additional latency, which we demonstrate through background noise suppression for speech.
 
 </details>
+
+本文介绍 ***SoundStream***, 一种新的神经音频编解码器, 能够以通常针对语音定制的编解码器的比特率高效压缩语音, 音乐和一般音频.
+***SoundStream*** 依赖于由全卷积编码器/解码器网络和残差矢量量化器组成的模型架构, 它们以端到端的方式联合训练.
+训练利用了文本转语音和语音增强领域的最新进展, 这些进展结合了对抗损失和重构损失以使得从量化嵌入中生成高质量音频内容.
+通过在量化器层应用结构化随机失活, 单个模型可以在 3 kbps 到 18 kbps 的可变比特率下运行, 与训练在固定比特率下时相比, 质量损失微乎其微.
+此外, 该模型适合低延迟实现, 支持流式推理, 并在智能手机 CPU 上实时运行.
+在使用 24kHz 采样率音频的主观评估中, ***SoundStream*** 在 3 kbps 比特率下优于 Opus 在 12 kbps 时的效果, 且接近 EVS 在 9.6 kbps 的性能.
+此外, 我们能够在编码器或解码器短进行联合压缩和增强, 没有额外延迟, 我们通过语音背景噪声抑制展示了这一点.
 
 ## 1·Introduction·引言
 
